[Dev] Add form to post comment in media page [Dev] Handle requests on server in genres and search stores [Dev] Add token to route params [Dev] Handle login in media page SSR [Dev] Add credentials to media requests [Fix] Update layout to fit at least to the screen [Fix] Remove footer in user pages

--- a/client/src/locales/fr.json
+++ b/client/src/locales/fr.json
@@ -37,7 +37,10 @@
 		"watch": "Regarder",
 		"comments": "Commentaires",
 		"no_torrents": "Pas encore de Torrents pour ce film !",
-		"no_comments": "Pas encore de commentaires pour ce film, soyez le premier !"
+		"no_comments": "Pas encore de commentaires pour ce film, soyez le premier !",
+		"comment_placeholder": "Poster un nouveau commentaire...",
+		"post_comment": "Poster",
+		"comment_fail": "Echec de la creation du commentaire, reesayez plus tard"
 	},
 	"auth": {
 		"email": "Email",
