--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -37,7 +37,10 @@
 		"watch": "Watch",
 		"comments": "Comments",
 		"no_torrents": "No torrents for this media, yet !",
-		"no_comments": "No comments on this media, yet, be the first one !"
+		"no_comments": "No comments on this media, yet, be the first one !",
+		"comment_placeholder": "Post a new comment...",
+		"post_comment": "Post",
+		"comment_fail": "Failed to post comment, retry layer"
 	},
 	"auth": {
 		"email": "Email",
