[Dev] Extract Player from media page [Dev] Add subtitles information messages below player

--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -43,7 +43,8 @@
     "comment_fail": "Failed to post comment, retry layer",
     "watching": "Watching",
     "watched": "Watched",
-    "resume": "Resume"
+    "resume": "Resume",
+    "theatre_mode": "Theatre mode"
   },
   "auth": {
     "email": "Email",
