[Dev] client: Add theatre mode [Dev] client: Display torrent status below player [Dev] client: Add current comment length in media page

--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -44,7 +44,8 @@
     "watching": "Watching",
     "watched": "Watched",
     "resume": "Resume",
-    "theatre_mode": "Theatre mode"
+    "theatre_mode": "Theatre mode",
+    "disable_theatre_mode": "Disable Theatre mode"
   },
   "auth": {
     "email": "Email",
