--- a/client/src/locales/fr.json
+++ b/client/src/locales/fr.json
@@ -1,105 +1,106 @@
 {
-	"search": {
-		"form": {
-			"year": "Annee",
-			"query_placeholder": "Recherche",
-			"rating": "Note",
-			"rating_placeholder": "Note Min.",
-			"sort_by": "Trier par",
-			"genres": {
-				"name": "Categories",
-				"clear": "Tout Enlever",
-				"no_results": "Aucune categorie pour l'instant !",
-				"loading": "Chargement..."
-			},
-			"sort_columns": {
-				"year": "Annee",
-				"name": "Nom",
-				"duration": "Duree",
-				"id": "#"
-			}
-		},
-		"no_results": "Aucun resultats !",
-		"load_more": "Charger Plus"
-	},
-	"asc": {
-		"short": "Asc"
-	},
-	"desc": {
-		"short": "Desc"
-	},
-	"media": {
-		"go_back": "Retour",
-		"actors": "Acteurs",
-		"staffs": "Credits",
-		"refresh_peers": "Rafraichir les pairs",
-		"size": "Taille",
-		"watch": "Regarder",
-		"comments": "Commentaires",
-		"no_torrents": "Pas encore de Torrents pour ce film !",
-		"no_comments": "Pas encore de commentaires pour ce film, soyez le premier !",
-		"comment_placeholder": "Poster un nouveau commentaire...",
-		"post_comment": "Poster",
-		"comment_fail": "Echec de la creation du commentaire, reesayez plus tard",
-		"watching": "En cours",
-		"watched": "Visionne",
-		"resume": "Reprendre",
-		"theatre_mode": "Mode theatre"
-	},
-	"auth": {
-		"email": "Email",
-		"password": "Mot de passe",
-		"forgot_password": "Mot de passe oublie ?",
-		"join_question": "Pas encore sur Hypertube ?",
-		"signup": "S'inscrire",
-		"continue_with": "Continuer avec",
-		"omniauth_separator": "ou",
-		"username": "Nom d'utilisateur",
-		"first_name": "Prénom",
-		"last_name": "Nom de famille",
-		"confirm_password": "Confirmation du mot de passe",
-		"member_question": "Déjà membre ?",
-		"login": "Se connecter",
-		"back_to": "Retour vers",
-		"to_login": "Connexion",
-		"login_header": "Connexion",
-		"register_header": "Inscription",
-		"forgot_password_header": "Retrouver son mot de passe",
-		"login_action": "Connexion",
-		"register_action": "S'inscrire",
-		"recover_by_mail": "Recuperer par mail",
-		"change_password": "Changer son mot de passe",
-		"server_error": "Une erreur s'est produite sur le serveur, veuillez reessayer",
-		"recover_mail_sent": "Un mail va vous etre envoye",
-		"no_user_mail": "Aucun utilisateur trouve avec cet email",
-		"email_already_in_use": "Email deja utilise, veuillez en choisir un autres",
-		"login_failed": "Email ou mot de passe invalide",
-		"password_updated": "Le mot de passe a bien ete modifie",
-		"current_password": "Mot de passe actuel",
-		"new_password": "Nouveau mot de passe",
-		"update": "Mettre a jour",
-		"invalid_password": "Mot de passe invalide",
-		"profile_updated": "Profil mis a jour",
-		"cancel": "Annuler",
-		"modify": "Modifier",
-		"my_profile": "Mon Profil",
-		"profile": "Profil",
-		"user_does_not_exists": "L'utilisateur n'existe pas"
-	},
-	"sanitizer": {
-		"missing": "Manquant",
-		"passwords_dont_match": "les mots de passes doivent etre les memes",
-		"too_short": "trop court, au minimum {amount} caractères",
-		"too_long": "trop long, au maximum {amount} caractères",
-		"missing_lowercase": "doit contenir au moins une lettre minuscule (a-z)",
-		"missing_uppercase": "doit contenir au moins une lettre majuscule (A-Z)",
-		"missing_digit": "doit contenir au moins un chiffre (0-9)",
-		"missing_special": "doit contenir au moins un caractere special (!@#...)",
-		"badly_formatted": "est mal formatte"
-	},
-	"logout": "Deconnexion",
-	"navigation": {
-		"search": "Recherche"
-	},
-	"language": "Langue"
+  "search": {
+    "form": {
+      "year": "Annee",
+      "query_placeholder": "Recherche",
+      "rating": "Note",
+      "rating_placeholder": "Note Min.",
+      "sort_by": "Trier par",
+      "genres": {
+        "name": "Categories",
+        "clear": "Tout Enlever",
+        "no_results": "Aucune categorie pour l'instant !",
+        "loading": "Chargement..."
+      },
+      "sort_columns": {
+        "year": "Annee",
+        "name": "Nom",
+        "duration": "Duree",
+        "id": "#"
+      }
+    },
+    "no_results": "Aucun resultats !",
+    "load_more": "Charger Plus"
+  },
+  "asc": {
+    "short": "Asc"
+  },
+  "desc": {
+    "short": "Desc"
+  },
+  "media": {
+    "go_back": "Retour",
+    "actors": "Acteurs",
+    "staffs": "Credits",
+    "refresh_peers": "Rafraichir les pairs",
+    "size": "Taille",
+    "watch": "Regarder",
+    "comments": "Commentaires",
+    "no_torrents": "Pas encore de Torrents pour ce film !",
+    "no_comments": "Pas encore de commentaires pour ce film, soyez le premier !",
+    "comment_placeholder": "Poster un nouveau commentaire...",
+    "post_comment": "Poster",
+    "comment_fail": "Echec de la creation du commentaire, reesayez plus tard",
+    "watching": "En cours",
+    "watched": "Visionne",
+    "resume": "Reprendre",
+    "theatre_mode": "Mode theatre",
+    "disable_theatre_mode": "Desactiver le Mode theatre"
+  },
+  "auth": {
+    "email": "Email",
+    "password": "Mot de passe",
+    "forgot_password": "Mot de passe oublie ?",
+    "join_question": "Pas encore sur Hypertube ?",
+    "signup": "S'inscrire",
+    "continue_with": "Continuer avec",
+    "omniauth_separator": "ou",
+    "username": "Nom d'utilisateur",
+    "first_name": "Prénom",
+    "last_name": "Nom de famille",
+    "confirm_password": "Confirmation du mot de passe",
+    "member_question": "Déjà membre ?",
+    "login": "Se connecter",
+    "back_to": "Retour vers",
+    "to_login": "Connexion",
+    "login_header": "Connexion",
+    "register_header": "Inscription",
+    "forgot_password_header": "Retrouver son mot de passe",
+    "login_action": "Connexion",
+    "register_action": "S'inscrire",
+    "recover_by_mail": "Recuperer par mail",
+    "change_password": "Changer son mot de passe",
+    "server_error": "Une erreur s'est produite sur le serveur, veuillez reessayer",
+    "recover_mail_sent": "Un mail va vous etre envoye",
+    "no_user_mail": "Aucun utilisateur trouve avec cet email",
+    "email_already_in_use": "Email deja utilise, veuillez en choisir un autres",
+    "login_failed": "Email ou mot de passe invalide",
+    "password_updated": "Le mot de passe a bien ete modifie",
+    "current_password": "Mot de passe actuel",
+    "new_password": "Nouveau mot de passe",
+    "update": "Mettre a jour",
+    "invalid_password": "Mot de passe invalide",
+    "profile_updated": "Profil mis a jour",
+    "cancel": "Annuler",
+    "modify": "Modifier",
+    "my_profile": "Mon Profil",
+    "profile": "Profil",
+    "user_does_not_exists": "L'utilisateur n'existe pas"
+  },
+  "sanitizer": {
+    "missing": "Manquant",
+    "passwords_dont_match": "les mots de passes doivent etre les memes",
+    "too_short": "trop court, au minimum {amount} caractères",
+    "too_long": "trop long, au maximum {amount} caractères",
+    "missing_lowercase": "doit contenir au moins une lettre minuscule (a-z)",
+    "missing_uppercase": "doit contenir au moins une lettre majuscule (A-Z)",
+    "missing_digit": "doit contenir au moins un chiffre (0-9)",
+    "missing_special": "doit contenir au moins un caractere special (!@#...)",
+    "badly_formatted": "est mal formatte"
+  },
+  "logout": "Deconnexion",
+  "navigation": {
+    "search": "Recherche"
+  },
+  "language": "Langue"
 }
