--- a/client/src/locales/fr.json
+++ b/client/src/locales/fr.json
@@ -104,5 +104,10 @@
   "navigation": {
     "search": "Recherche"
   },
-  "language": "Langue"
+  "language": "Langue",
+  "error": {
+    "not_found": "Page Non Trouvé ",
+    "back_to_search": "Retour a la Recherche",
+    "login_or_register": "Connexion/Inscription"
+  }
 }
