[Dev] api-streaming: Update transcode options for a much faster processing [Dev] client: Add titles to each pages [Fix] client: Fix player scroll in theatre view [Fix] client: Remove player stale detection [Dev] client: Update position of the current torrents on the page when needed [Env] client: Add types alias

--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -109,5 +109,13 @@
     "not_found": "Not Found",
     "back_to_search": "Back to Search",
     "login_or_register": "Login/Register"
+  },
+  "title": {
+    "media": "Watch {title} on hypertube",
+    "recover_password": "hypertube :: Recover Password",
+    "register": "hypertube :: Register",
+    "login": "hypertube :: Login",
+    "search": "Results for {query} on hypertube",
+    "search_empty": "hypertube :: Search"
   }
 }
