[Dev] client: Add SSR in users page [Dev] client: Update session store when updating your profile [Dev] client: Add error message for some error codes [Fix] client: Update api-user env variable

--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -109,7 +109,10 @@
     "not_found": "Not Found",
     "back_to_search": "Back to Search",
     "login_or_register": "Login/Register",
-    "server_error": "Internal Server Error"
+    "server_error": "Internal Server Error",
+    "forbidden": "Forbidden",
+    "unauthorized": "Unauthorized",
+    "bad_request": "Bad Request"
   },
   "title": {
     "media": "Watch {title} on hypertube",
