--- a/client/src/locales/fr.json
+++ b/client/src/locales/fr.json
@@ -109,7 +109,10 @@
     "not_found": "Page Non Trouvé ",
     "back_to_search": "Retour a la Recherche",
     "login_or_register": "Connexion/Inscription",
-    "server_error": "Erreur interne du serveur"
+    "server_error": "Erreur interne du serveur",
+    "forbidden": "Page Interdite",
+    "unauthorized": "Autorisation Manquantes",
+    "bad_request": "Mauvaise Requete"
   },
   "title": {
     "media": "Regardez {title} sur hypertube",
